--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -11,9 +11,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            app:carElevation="10dp"
-            app:cardCornerRadius="10dp">
+            android:layout_margin="10dp">
+            <!--app:carElevation="10dp"
+            app:cardCornerRadius="10dp"-->
 
             <RelativeLayout
                 android:layout_width="match_parent"
