Recycler view for project onglet

--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            app:carElevation="10dp"
+            app:cardElevation="10dp"
             app:cardCornerRadius="10dp">
 
             <RelativeLayout
@@ -29,13 +29,24 @@
                     android:textFontWeight="1000"
                     android:textSize="20dp" />
 
+                <TextView
+                    android:id="@+id/deadline_project"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/name_project"
+                    android:text="Deadline"
+                    android:textColor="@color/black"
+                    android:textFontWeight="1000"
+                    android:textSize="15dp" />
+
                 <ImageButton
                     android:id="@+id/edit_project"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#00FFFFFF"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="#00FFFFFF"
                     app:srcCompat="@drawable/setings_points" />
 
 
@@ -45,4 +56,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
