--- a/app/src/main/res/layout/fragment_tasks_item.xml
+++ b/app/src/main/res/layout/fragment_tasks_item.xml
@@ -6,11 +6,12 @@
 
     <CheckBox
         android:id="@+id/task_status"
-        android:checked="false"
-        android:button="@drawable/task_status_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:button="@drawable/task_status_selector"
+        android:checked="false"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/fragment_tasks_item_title"
