--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -6,42 +6,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/validateButton_new_task"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="345dp"
-        android:layout_marginTop="56dp"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/checkmark"
-        android:onClick="validateNewTask" />
-
-    <ImageButton
+    <Button
         android:id="@+id/returnButton_new_task"
         android:layout_width="59dp"
         android:layout_height="55dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="58dp"
-        android:layout_marginEnd="348dp"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:foreground="@drawable/return_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/return_button"
-        android:onClick="returnToTask" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/validateButton_new_task"
+        android:layout_width="59dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="15dp"
+        android:foreground="@drawable/checkmark"
+        android:foregroundGravity="center"
+        android:onClick="validateNewTask"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_new_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="70dp"
+        android:layout_marginEnd="125dp"
         android:text="Add New Task"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/returnButton_new_task"
+        app:layout_constraintEnd_toStartOf="@+id/validateButton_new_task"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -77,7 +73,7 @@
         android:id="@+id/deadline_title_new_task"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:text="Deadline"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -99,11 +95,11 @@
         android:id="@+id/textInputLayout_description_new_task"
         android:layout_width="340dp"
         android:layout_height="150dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:background="#ECEBEB"
-        app:layout_constraintTop_toBottomOf="@+id/deadline_title_new_task"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deadline_title_new_task">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/task_description"
@@ -122,5 +118,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_description_new_task"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout_description_new_task" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
