activity_new_task.xml update des contrainte des layout

--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -5,42 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
-        android:id="@+id/validate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="345dp"
-        android:layout_marginTop="56dp"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/checkmark"
-        android:onClick="validateNewProject"/>
-
-    <ImageButton
-        android:id="@+id/imageButton2"
+    <Button
+        android:id="@+id/returnButton_new_project"
         android:layout_width="59dp"
         android:layout_height="55dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="58dp"
-        android:layout_marginEnd="348dp"
-        android:backgroundTint="#00FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:foreground="@drawable/return_button"
+        android:stateListAnimator="@null"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/return_button" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/validateButton_new_project"
+        android:layout_width="59dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="15dp"
+        android:foreground="@drawable/checkmark"
+        android:stateListAnimator="@null"
+        android:foregroundGravity="center"
+        android:onClick="validateNewProject"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="150dp"
         android:text="Add Project"
         android:textColor="@color/black"
         android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/validate"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/validateButton_new_project"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
