--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -11,7 +11,6 @@
         android:layout_width="59dp"
         android:layout_height="55dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="58dp"
         android:foreground="@drawable/return_button"
         android:stateListAnimator="@null"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,12 +20,11 @@
         android:id="@+id/validateButton_new_task"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginTop="56dp"
         android:layout_marginEnd="15dp"
         android:foreground="@drawable/checkmark"
-        android:stateListAnimator="@null"
         android:foregroundGravity="center"
         android:onClick="validateNewTask"
+        android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,12 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="15dp"
         android:text="Add New Task"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/returnButton_new_task"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/validateButton_new_task" />
 
 
     <TextView
