--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,6 @@
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.student_to_do_list.ui.notifications.SettingsFragment"
-        android:label="@string/title_settings"
+        android:label="@string/title_credit"
         tools:layout="@layout/fragment_settings" />
 </navigation>
