--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -7,23 +7,24 @@
 
     <Button
         android:id="@+id/returnButton_new_project"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:foreground="@drawable/return_button"
-        android:stateListAnimator="@null"
+        android:layout_marginStart="1dp"
+        android:foreground="@drawable/back"
+        android:foregroundGravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/validateButton_new_project"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="15dp"
-        android:foreground="@drawable/checkmark"
+        android:layout_marginEnd="1dp"
+        android:foreground="@drawable/check_vector"
         android:foregroundGravity="center"
         android:onClick="validateNewProject"
-        android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,6 +55,7 @@
 
         <Button
             android:id="@+id/button_addcollab"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
@@ -169,6 +171,7 @@
 
     <Button
         android:id="@+id/button"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="42dp"
         android:layout_height="47dp"
         android:layout_marginStart="5dp"
