--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -8,23 +8,24 @@
 
     <Button
         android:id="@+id/returnButton_new_task"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginStart="15dp"
-        android:foreground="@drawable/return_button"
-        android:stateListAnimator="@null"
+        android:layout_marginStart="1dp"
+        android:foreground="@drawable/back"
+        android:foregroundGravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/validateButton_new_task"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginEnd="15dp"
-        android:foreground="@drawable/checkmark"
+        android:layout_marginEnd="1dp"
+        android:foreground="@drawable/check_vector"
         android:foregroundGravity="center"
         android:onClick="validateNewTask"
-        android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
