--- a/app/src/main/res/layout/fragment_tasks_item.xml
+++ b/app/src/main/res/layout/fragment_tasks_item.xml
@@ -2,32 +2,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dip">
+    android:orientation="vertical"
+    android:padding="15dp">
 
-    <CheckBox
-        android:id="@+id/task_status"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/task_item"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:button="@drawable/task_status_selector"
-        android:checked="false"
-        android:visibility="visible" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/fragment_tasks_item_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginLeft="20dp"
-        android:fontFamily="@font/inter_regular"
-        android:textSize="20dp"
-        android:layout_gravity="center" />
+        <CheckBox
+            android:id="@+id/task_item_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:button="@drawable/task_status_selector"
+            android:checked="false"
+            android:visibility="visible" />
 
-    <ImageView
-        android:id="@+id/task_arrow"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tasks_item_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/inter_regular"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/task_item_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/expand_arrow_0"
+            android:layout_marginRight="10dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/task_sub_item"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/expand_arrow_0"
-        android:layout_gravity="center" />
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="3dp"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="24dp"
+            android:background="#747474"/>
+
+        <LinearLayout
+            android:id="@+id/task_sub_sub_item"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="31dp"
+            android:layout_marginRight="35dp"
+            android:orientation="vertical">
+
+
+            <TextView
+                android:id="@+id/task_sub_item_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/task_sub_item_deadline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+        </LinearLayout>
+</LinearLayout>
 
 </LinearLayout>
