--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -11,16 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageButton
+    <Button
         android:id="@+id/addProjectButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="12dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="66dp"
-        android:background="@drawable/add_logo"
-        android:onClick="addNewProject" />
+        android:foreground="@drawable/add_logo"
+        android:onClick="addNewProject"
+        app:cornerRadius="30dp"/>
 
 
 
