--- a/app/src/main/res/layout/activity_new_project.xml
+++ b/app/src/main/res/layout/activity_new_project.xml
@@ -14,6 +14,7 @@
         android:foreground="@drawable/back"
         android:drawableTint="?attr/colorButtonNormal"
         android:foregroundGravity="center"
+        android:onClick="returnFromTask"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
