--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -36,7 +36,6 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:text="Add New Task"
-        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/returnButton_new_task"
         app:layout_constraintTop_toTopOf="@+id/validateButton_new_task" />
@@ -47,7 +46,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_name_new_task"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout_name_new_task" />
@@ -77,7 +75,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="Deadline"
-        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout_name_new_task"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name_new_task" />
@@ -87,6 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
+        android:focusableInTouchMode="false"
         android:ems="10"
         android:inputType="date"
         app:layout_constraintBottom_toBottomOf="@+id/deadline_title_new_task"
@@ -98,9 +96,8 @@
         android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="10dp"
-        android:background="#ECEBEB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/deadline_title_new_task">
@@ -109,7 +106,6 @@
             android:id="@+id/task_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
             android:hint="Task Description" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -118,7 +114,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout_description_new_task"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout_description_new_task" />
