Database projects + RecyclerView projects OK

--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -29,8 +29,7 @@
         app:cornerRadius="30dp" />
 
     <Button
-        android:id="@+id/clearButton"
-
+        android:id="@+id/clearTasksButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
