--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -9,7 +9,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_projects"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="56dp"
+        android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/addProjectButton"
@@ -24,6 +26,15 @@
         android:onClick="addNewProject"
         app:cornerRadius="30dp"/>
 
-
+    <Button
+        android:id="@+id/clearProjectsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="72dp"
+        android:text="CLEAR ALL"
+        android:textColor= "@color/black"/>
 
 </RelativeLayout>
