--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -18,26 +18,41 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:padding="10dp">
 
                 <TextView
                     android:id="@+id/name_project"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Project_Name"
-                    android:textColor="@color/black"
                     android:textFontWeight="1000"
+                    android:fontFamily="@font/inter_bold"
                     android:textSize="20dp" />
 
-                <TextView
-                    android:id="@+id/deadline_project"
+                <LinearLayout
+                    android:id="@+id/deadline_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/name_project"
-                    android:text="Deadline"
-                    android:textColor="@color/black"
-                    android:textFontWeight="1000"
-                    android:textSize="15dp" />
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/deadline_project"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Deadline: "
+                        android:textFontWeight="1000"
+                        android:fontFamily="@font/inter_regular"
+                        android:textSize="15dp" />
+                    <TextView
+                        android:id="@+id/deadline_project_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:textColor="@color/steal_gray"
+                        android:textFontWeight="1000"
+                        android:fontFamily="@font/inter_regular"
+                        android:textSize="15dp" />
+                </LinearLayout>
 
                 <ImageButton
                     android:id="@+id/edit_project"
