RVItemTouchListener ajouté mais pas fonctionnel

--- a/app/src/main/res/layout/fragment_tasks_item.xml
+++ b/app/src/main/res/layout/fragment_tasks_item.xml
@@ -11,13 +11,23 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <CheckBox
+        <!-- <CheckBox
             android:id="@+id/task_item_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:button="@drawable/task_status_selector"
             android:checked="false"
+            android:visibility="visible" /> -->
+        <Button
+            android:id="@+id/task_item_status_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginLeft="8dp"
+            android:foreground="@drawable/task_status_0"
+            android:foregroundGravity="center"
             android:visibility="visible" />
 
         <TextView
@@ -25,6 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/inter_regular"
@@ -59,7 +70,6 @@
             android:layout_marginLeft="31dp"
             android:layout_marginRight="35dp"
             android:orientation="vertical">
-
 
             <TextView
                 android:id="@+id/task_sub_item_desc"
