--- a/app/src/main/res/layout/project_card.xml
+++ b/app/src/main/res/layout/project_card.xml
@@ -25,6 +25,7 @@
                     android:id="@+id/name_project"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:textFontWeight="1000"
                     android:fontFamily="@font/inter_bold"
                     android:textSize="20dp" />
@@ -40,6 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Deadline: "
+                        android:textColor="@color/black"
                         android:textFontWeight="1000"
                         android:fontFamily="@font/inter_regular"
                         android:textSize="15dp" />
